[package]
name = "freaky-bot"
version = "0.1.0"
authors = ["CarsBeck"]
edition = "2021"

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0" # Poise is a serenity command framework, it can run on Shuttle with shuttle-serenity
tracing = "0.1.37"
tokio = "1.26.0"
